@@ -156,7 +156,8 @@ production.
 * (bug 32168) Add wfAssembleUrl for use in wfExpandUrl.
 * (bug 32168) fixed - wfExpandUrl expands dot segments now.
 * (bug 31535) Upload comments now truncated properly, and don't have brackets.
-* (bug 32450) Scripts pages in MediaWiki: namespace parse [[Category:#]] links.
+* (bug 32858) Do not register links, categories, etc. from CSS/JS pages in the
+  database.
 * (bug 32086) Special:PermanentLink now show an error message when no subpage
   was specified.
 * (bug 30368) Special:Newpages now shows the new page name for moved pages.
